# discord-webhook-weather

./: Cargo.toml
.github/workflows/: bot.yml
src/: main.rs  structs.rs
