[package]
name = "discord-webhook-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serenity = { version = "0.12.1", default-features = false, features = ["rustls_backend", "model"] }
tokio = { version = "1.37.0", features = ["full"] }
tzfile = "0.1.3"
