[package]
name = "discord-webhook-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serenity = { version = "0.12.2", default-features = false, features = ["rustls_backend", "model"] }
tokio = { version = "1.39.3", features = ["full"] }
tzfile = "0.1.3"
time = "0.3.36"